# kafka_name_summary_AI

./: README.md  consumer.py  producer.py  pyproject.toml
